--- a/04_Model_Tuning.ipynb
+++ b/04_Model_Tuning.ipynb
@@ -706,8 +706,36 @@
    "id": "0cfe0089",
    "metadata": {},
    "source": [
-    "Lasso zeroes out numerous unnecessary features.  Final top 3 are total rooms (12k), Exterior Quality (11k) and the neighborhood categories (10.8k for Northridge Heights and 9300 for Stone Brook."
+    "Lasso zeroes out numerous unnecessary features.  \n",
+    "\n",
+    "Final top 3 are total rooms (12k), Exterior Quality (11k) and the neighborhood categories (10.8k for Northridge Heights and 9300 for Stone Brook."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f03497d2",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a49484",
+   "metadata": {},
+   "source": [
+    "Ultimately, the model is slightly underfit, and can only explain 84% of the variance in sale price for the test data.  We have attempted and rejected ways to tighten the fit by increasing the number of features through polynomial features engineering, but this produced severely over-fitted results.\n",
+    "\n",
+    "In further iterations, we would likely attempt to manually generate a few additional features rather than open the floodgates of polynomial engineering.  However, this process must be done artfully, as we have invested significant effort to maintain the independence of our features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4e64ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
